--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,2 +1,6 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <dimen name="keyline">16dp</dimen>
+
+    <dimen name="elevation_toolbar">4dp</dimen>
 </resources>
