--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="keyline">16dp</dimen>
+    <dimen name="keyline_half">8dp</dimen>
+    <dimen name="keyline_quarter">4dp</dimen>
+
+    <dimen name="space_normal">8dp</dimen>
 
     <dimen name="elevation_toolbar">4dp</dimen>
+
+    <dimen name="recycler_card_space">@dimen/keyline_quarter</dimen>
+
+    <dimen name="tweet_user_photo_size">48dp</dimen>
 </resources>
