--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -11,6 +11,7 @@
         <item name="colorDivider">#88333333</item>
         <item name="colorControlHighlight">?colorAccent</item>
         <item name="backgroundPrimary">#fdfdfd</item>
+        <item name="themeInverse">@style/AppTheme.Inverse</item>
 
         <item name="android:windowContentTransitions" tools:ignore="NewApi">true</item>
 
@@ -26,6 +27,16 @@
 
         <item name="android:progressBarStyle">@style/ProgressBar</item>
         <item name="android:scrollViewStyle">@style/ScrollView</item>
+    </style>
+
+    <style name="AppTheme.Inverse">
+        <item name="colorActionIcon">#ffffff</item>
+        <item name="themeInverse">@style/AppTheme</item>
+
+        <item name="android:textColorPrimary">#ffffff</item>
+        <item name="android:textColorPrimaryInverse">#212121</item>
+        <item name="android:textColorSecondary">?colorPrimaryLight</item>
+        <item name="android:textColorSecondaryInverse">#727272</item>
     </style>
 
     <!-- Default styles -->
