--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -70,6 +70,13 @@
         <item name="borderWidth">0dp</item>
     </style>
 
+    <!-- EditText -->
+    <!-- =============================================================================================================================== -->
+
+    <style name="EditText.Big">
+        <item name="android:textAppearance">@style/Text.Display1</item>
+    </style>
+
     <!-- CardView -->
     <!-- =============================================================================================================================== -->
 
