--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,6 +4,9 @@
     <dimen name="keyline_half">8dp</dimen>
     <dimen name="keyline_quarter">4dp</dimen>
 
+    <dimen name="actionbar_2x">112dp</dimen>
+    <dimen name="fab_size_half_negative">-28dp</dimen>
+
     <dimen name="space_normal">8dp</dimen>
 
     <dimen name="elevation_toolbar">4dp</dimen>
