Can create tweet

--- a/app/src/main/res/layout/activity_create_tweet.xml
+++ b/app/src/main/res/layout/activity_create_tweet.xml
@@ -22,6 +22,7 @@
             android:elevation="@dimen/elevation_toolbar"
             android:hint="@string/message"
             android:inputType="textCapSentences|textMultiLine"
+            android:maxLength="140"
             android:minHeight="@dimen/actionbar_2x"
             android:padding="@dimen/keyline"
             android:theme="?themeInverse"
