--- a/app/src/main/res/layout/activity_tweets.xml
+++ b/app/src/main/res/layout/activity_tweets.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -36,6 +37,8 @@
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/keyline"
         android:src="@drawable/ic_action_add"
-        android:theme="?themeInverse" />
+        android:theme="?themeInverse"
+        android:transitionName="@string/transition_name_fab"
+        tools:ignore="UnusedAttribute" />
 
 </android.support.design.widget.CoordinatorLayout>
